--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "jss": "latest",
+    "mdi-react": "^3.4.0",
     "mongo-connect": "0.0.6",
     "next": "6.0.3",
     "next-redux-wrapper": "^2.0.0-beta.6",
