--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.1.2",
     "mongoose-paginate": "^5.0.3",
     "morgan": "~1.9.0",
-    "sendgrid": "^5.2.3"
+    "sendgrid": "^5.2.3",
+    "underscore": "^1.9.1"
   }
 }
