--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -7,8 +7,10 @@
     "mdi-react": "^3.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "redux-saga": "^0.16.0",
     "underscore": "^1.9.1"
   },
   "scripts": {
