--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.2.1",
+    "autosuggest-highlight": "^3.1.1",
     "mdi-react": "^3.4.0",
     "react": "^16.4.1",
+    "react-autosuggest": "^9.3.4",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
