--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.2.1",
-    "autosuggest-highlight": "^3.1.1",
     "@material-ui/icons": "^1.1.0",
+    "autosuggest-highlight": "^3.1.1",
     "mdi-react": "^3.4.0",
     "react": "^16.4.1",
     "react-autosuggest": "^9.3.4",
     "react-dom": "^16.4.1",
+    "react-qr-reader": "^2.1.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
