--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^1.2.1",
     "@material-ui/icons": "^1.1.0",
     "autosuggest-highlight": "^3.1.1",
+    "date-fns": "^2.0.0-alpha.7",
+    "material-ui-pickers": "^1.0.0-rc.10",
     "mdi-react": "^3.4.0",
     "react": "^16.4.1",
     "react-autosuggest": "^9.3.4",
