--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -14,6 +14,7 @@
     "react": "^16.4.1",
     "react-autosuggest": "^9.3.4",
     "react-dom": "^16.4.1",
+    "react-native-barcode-scanner-universal": "^1.0.5",
     "react-qr-reader": "^2.1.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
