--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.3.1",
+    "es6-promise": "^4.2.4",
+    "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.2.0",
     "next": "^6.1.1",
+    "next-cookies": "^1.0.2",
     "prop-types": "latest",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
