--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,16 @@
     "es6-promise": "^4.2.4",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
+    "material-ui": "^0.20.1",
+    "material-ui-autocomplete-google-places": "^2.2.0",
     "next": "^6.1.1",
     "next-cookies": "^1.0.2",
     "prop-types": "latest",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-google-autocomplete": "^1.0.16",
     "react-jss": "latest",
+    "react-places-autocomplete": "^7.2.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
