--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
-    "styled-jsx": "latest"
+    "styled-jsx": "latest",
+    "uuid": "^3.3.2"
   },
   "keywords": [],
   "author": "",
