--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "styled-jsx": "latest",
+    "underscore": "^1.9.1",
     "uuid": "^3.3.2"
   },
   "keywords": [],
