--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,12 @@
     "build": "next build",
     "start": "next start"
   },
+
+  "next": {
+    "routes": {
+      "/dashboard/pets/guardian-details/:guardian_id": "/dashboard/pets/guardian"
+    }
+  },
   "dependencies": {
     "@material-ui/core": "^1.3.1",
     "es6-promise": "^4.2.4",
