--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next -p 3001",
+    "dev": "export  PORT=3001; node --harmony ./server.js",
+    "dev2": "next -p 3001",
     "build": "next build",
     "start": "next start"
   },
-
   "next": {
     "routes": {
       "/dashboard/pets/guardian-details/:guardian_id": "/dashboard/pets/guardian"
@@ -17,12 +17,14 @@
   "dependencies": {
     "@material-ui/core": "^1.3.1",
     "es6-promise": "^4.2.4",
+    "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "material-ui": "^0.20.1",
     "material-ui-autocomplete-google-places": "^2.2.0",
     "next": "^6.1.1",
     "next-cookies": "^1.0.2",
+    "next-routes": "^1.4.2",
     "prop-types": "latest",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
