--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^2.2.0",
     "material-ui": "^0.20.1",
     "material-ui-autocomplete-google-places": "^2.2.0",
+    "moment": "^2.22.2",
     "next": "^6.1.1",
     "next-cookies": "^1.0.2",
     "next-routes": "^1.4.2",
