--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "md5": "^2.2.1",
+    "moment": "^2.22.2",
     "mongoose": "^5.1.2",
     "mongoose-paginate": "^5.0.3",
     "morgan": "~1.9.0",
