--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "next-cookies": "^1.0.2",
     "next-routes": "^1.4.2",
     "prop-types": "latest",
+    "qrcode.react": "^0.8.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-google-autocomplete": "^1.0.16",
