--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-google-autocomplete": "^1.0.16",
     "react-jss": "latest",
     "react-places-autocomplete": "^7.2.0",
+    "react-qr-reader": "^2.1.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
